--- a/src/main/resources/templates/layouts/Master/QuotationDetail.html
+++ b/src/main/resources/templates/layouts/Master/QuotationDetail.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
                                                 ~{::title},
                                                 ~{:: #home-static-resources},
                                                 ~{:: #home-header},
@@ -12,24 +11,22 @@
                                                )}">
 
 <head>
-<title>Title of Home Page</title>
+	<title>Title of Home Page</title>
 
-<th:block id="home-static-resources">
+	<th:block id="home-static-resources">
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
+		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
 
-</th:block>
+	</th:block>
 
 </head>
+
 <body>
 
 	<div id="home-header">WhareHouse</div>
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
+	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
 	</div>
 
 
@@ -57,35 +54,41 @@
 							<h5>Quotation Details</h5>
 							<div class="form-row">
 								<div class="form-group col-md-4">
-									<label for="inputEmail4">Quotation No.</label> <input
-										type="text" class="form-control" id="inputEmail4"
-										placeholder="quotation no" th:field="*{quotNo}">
+									<label for="inputEmail4">Quotation No.</label> <input type="text"
+										class="form-control" id="inputEmail4" placeholder="quotation no"
+										th:field="*{quotNo}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Quotation Date</label> <input
-										type="date" class="form-control" id="inputPassword4"
-										placeholder="quotation date" th:field="*{quotDate}">
+									<label for="inputPassword4">Quotation Date</label> <input type="date"
+										class="form-control" id="inputPassword4" placeholder="quotation date"
+										th:field="*{quotDate}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Nature of Purchase</label> <input
-										type="text" class="form-control" id="inputPassword4"
-										placeholder="nature of purchase">
+									<label for="inputPassword4">Nature of Purchase</label> <input type="text"
+										class="form-control" id="inputPassword4" placeholder="nature of purchase">
 								</div>
 
 								<div class="form-group col-md-4">
-									<label for="inputAddress">Received On</label> <input
-										type="date" class="form-control" id="inputAddress"
-										placeholder="received on" th:field="*{receivedOn}">
+									<label for="inputAddress">Received On</label> <input type="date"
+										class="form-control" id="inputAddress" placeholder="received on"
+										th:field="*{receivedOn}">
 								</div>
+								
 								<div class="form-group col-md-4">
-									<label for="inputAddress">RFQ No.</label> <input type="text"
-										class="form-control" id="inputAddress" placeholder="rfq no"
-										th:field="*{refNo}">
+									<label class="form-label">RFQ Number </label> <label
+										style="color: red">*</label> <select class="form-control"
+										onchange="changeDepartment()" title="RFQ Number"
+										required>
+										<option value="">Select RFQ</option>
+										<option th:each="rfq :  ${listrfQuotation}"
+											th:text="${rfq.deptName}" th:value=" ${department.departmentCode}">
+										</option>
+									</select>
 								</div>
+								
 								<div class="form-group col-md-4">
-									<label for="inputAddress">RFQ Date</label> <input type="date"
-										class="form-control" id="inputAddress" placeholder="rfq date"
-										th:field=*{refDate}>
+									<label for="inputAddress">RFQ Date</label> <input type="date" class="form-control"
+										id="inputAddress" placeholder="rfq date" th:field=*{refDate}>
 								</div>
 
 
@@ -101,35 +104,33 @@
 							<h5>Supplier Info</h5>
 							<div class="form-row">
 								<div class="form-group col-md-4">
-									<label for="inputEmail4">Supplier Code</label> <input
-										type="text" class="form-control" id="inputEmail4"
-										placeholder="quotation no" th:field="*{suplierCode}">
+									<label for="inputEmail4">Supplier Code</label> <input type="text"
+										class="form-control" id="inputEmail4" placeholder="quotation no"
+										th:field="*{suplierCode}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Supplier Name</label> <input
-										type="date" class="form-control" id="inputPassword4"
-										placeholder="quotation date" th:field="*{tempSupName}">
+									<label for="inputPassword4">Supplier Name</label> <input type="date"
+										class="form-control" id="inputPassword4" placeholder="quotation date"
+										th:field="*{tempSupName}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Supplier City</label> <input
-										type="text" class="form-control" id="inputPassword4"
-										placeholder="nature of purchase" th:field="*{supCityCode}">
+									<label for="inputPassword4">Supplier City</label> <input type="text"
+										class="form-control" id="inputPassword4" placeholder="nature of purchase"
+										th:field="*{supCityCode}">
 								</div>
 
 								<div class="form-group col-md-4">
-									<label for="inputAddress">Form Code</label> <input type="date"
-										class="form-control" id="inputAddress"
-										placeholder="received on">
+									<label for="inputAddress">Form Code</label> <input type="date" class="form-control"
+										id="inputAddress" placeholder="received on">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputAddress">Supplier Country</label> <input
-										type="text" class="form-control" id="inputAddress"
-										placeholder="supplier country" th:field="*{supCountry}">
+									<label for="inputAddress">Supplier Country</label> <input type="text"
+										class="form-control" id="inputAddress" placeholder="supplier country"
+										th:field="*{supCountry}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputAddress">Form Type</label> <input type="text"
-										class="form-control" id="inputAddress" placeholder="from type"
-										th:field="*{fromCode}">
+									<label for="inputAddress">Form Type</label> <input type="text" class="form-control"
+										id="inputAddress" placeholder="from type" th:field="*{fromCode}">
 								</div>
 
 
@@ -145,14 +146,14 @@
 
 							<div class="form-row">
 								<div class="form-group col-md-6">
-									<label for="inputEmail4">Currency Code</label> <input
-										type="text" class="form-control" id="inputEmail4"
-										placeholder="currency code" th:field="*{currencyCode}">
+									<label for="inputEmail4">Currency Code</label> <input type="text"
+										class="form-control" id="inputEmail4" placeholder="currency code"
+										th:field="*{currencyCode}">
 								</div>
 								<div class="form-group col-md-6">
-									<label for="inputPassword4">Currency Value</label> <input
-										type="text" class="form-control" id="inputPassword4"
-										placeholder="currency value" th:field="*{conversionValue}">
+									<label for="inputPassword4">Currency Value</label> <input type="text"
+										class="form-control" id="inputPassword4" placeholder="currency value"
+										th:field="*{conversionValue}">
 								</div>
 
 
@@ -166,14 +167,14 @@
 							<h5>Delivery Details</h5>
 							<div class="form-row">
 								<div class="form-group col-md-4">
-									<label for="inputEmail4">Delivery Period</label> <input
-										type="text" class="form-control" id="inputEmail4"
-										placeholder="delivery period" th:field="*{deliveryPeriod}">
+									<label for="inputEmail4">Delivery Period</label> <input type="text"
+										class="form-control" id="inputEmail4" placeholder="delivery period"
+										th:field="*{deliveryPeriod}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Delivery Mode</label> <input
-										type="date" class="form-control" id="inputPassword4"
-										placeholder="delivery mode" th:field="*{delMode}">
+									<label for="inputPassword4">Delivery Mode</label> <input type="date"
+										class="form-control" id="inputPassword4" placeholder="delivery mode"
+										th:field="*{delMode}">
 								</div>
 
 								<div class="col-md-4">
@@ -203,122 +204,128 @@
 					<!-- second tab -->
 					<div id="tdsinfo" class="tab-pane fade">
 						<!-- dynamic content start -->
-					
-							<div class="card form-border">
-								<div class="card-header"></div>
-								<div class="card-body">
 
-									<input id="_cr" name="_cr" type="hidden" value="1">
+						<div class="card form-border">
+							<div class="card-header"></div>
+							<div class="card-body">
 
-									<div>
+								<input id="_cr" name="_cr" type="hidden" value="1">
 
-										<div style="text-align: right">
+								<div>
 
-
+									<div style="text-align: right">
 
 
-											<a id="add_row" class="fa fa-plus" aria-hidden="true"
-												style="font-size: 22px; color: #001080"></a>
-											<a id='delete_row' class="fa fa-trash"
-												style="font-size: 22px; color: #399490fc" aria-hidden="true"></a>
-										</div>
-
-										<div class="table-responsive">
-											<table id="example" aria-describedby="example"
-												class="table table-striped display" style="width: 100%">
-												<thead>
-													<tr>
-														<th scope="col" class="text-center" style="width: 90px;">Indent Number</th>
-														<th scope="col" class="text-center" style="width: 130px;">Indent Date</th>
-														<th scope="col" class="text-center" style="width: 100px;">Employee Code</th>
-														<th scope="col" class="text-center" style="width: 90px;">Employee Name</th>
-														<th scope="col" class="text-center" style="width: 90px;">Item Code</th>
-														<th scope="col" class="text-center" style="width: 90px;">Description</th>
-														<th scope="col" class="text-center" style="width: 10px;">UOM</th>
-														<th scope="col" class="text-center" style="width: 120px;">Rate</th>
-														<th scope="col" class="text-center" style="width: 90px;">Negotiable Cost</th>
-														<th scope="col" class="text-center" style="width: 90px;">Qty</th>
-														<th scope="col" class="text-center" style="width: 120px;">Total INR Value</th>
-														<th scope="col" class="text-center" style="width: 90px;">Approval Status</th>
-														
-
-													</tr>
-												</thead>
-												<tbody>
-													<tr id="addr0">
 
 
-														<td><input type="text" style="width: 90px;"
-															id="desigCode0" readonly title="Designation code"
+										<a id="add_row" class="fa fa-plus" aria-hidden="true"
+											style="font-size: 22px; color: #001080"></a>
+										<a id='delete_row' class="fa fa-trash" style="font-size: 22px; color: #399490fc"
+											aria-hidden="true"></a>
+									</div>
+
+									<div class="table-responsive">
+										<table id="example" aria-describedby="example"
+											class="table table-striped display" style="width: 100%">
+											<thead>
+												<tr>
+													<th scope="col" class="text-center" style="width: 90px;">Indent
+														Number</th>
+													<th scope="col" class="text-center" style="width: 130px;">Indent
+														Date</th>
+													<th scope="col" class="text-center" style="width: 100px;">Employee
+														Code</th>
+													<th scope="col" class="text-center" style="width: 90px;">Employee
+														Name</th>
+													<th scope="col" class="text-center" style="width: 90px;">Item Code
+													</th>
+													<th scope="col" class="text-center" style="width: 90px;">Description
+													</th>
+													<th scope="col" class="text-center" style="width: 10px;">UOM</th>
+													<th scope="col" class="text-center" style="width: 120px;">Rate</th>
+													<th scope="col" class="text-center" style="width: 90px;">Negotiable
+														Cost</th>
+													<th scope="col" class="text-center" style="width: 90px;">Qty</th>
+													<th scope="col" class="text-center" style="width: 120px;">Total INR
+														Value</th>
+													<th scope="col" class="text-center" style="width: 90px;">Approval
+														Status</th>
+
+
+												</tr>
+											</thead>
+											<tbody>
+												<tr id="addr0">
+
+
+													<td><input type="text" style="width: 90px;" id="desigCode0" readonly
+															title="Designation code" required></td>
+
+													<td><select id="designationName0" style="width: 130px;" required
+															onchange="selectDesignation()" title="Designation name">
+															<option value=" ">Select</option>
+
+
+														</select></td>
+
+
+
+													<td><select id="location" style="width: 100px;" title="Location"
+															required>
+															<option value=" ">Select</option>
+															<option value="Court">Court</option>
+															<option value="Department">Department</option>
+														</select></td>
+
+													<td><select id="sex" style="width: 90px;" required>
+															<option value=" ">Select</option>
+															<option value="Male">Male</option>
+															<option value="Female">Female</option>
+														</select></td>
+
+													<td><input type="number" style="width: 90px;" id="ageFrom" min="18"
+															title="Age from" required></td>
+
+													<td><input type="number" max="45" style="width: 90px;" id="ageTo"
 															required></td>
 
-														<td><select id="designationName0"
-															style="width: 130px;" required
-															onchange="selectDesignation()" title="Designation name">
-																<option value=" ">Select</option>
-
-
-														</select></td>
-
-
-
-														<td><select id="location" style="width: 100px;"
-															title="Location" required>
-																<option value=" ">Select</option>
-																<option value="Court">Court</option>
-																<option value="Department">Department</option>
-														</select></td>
-
-														<td><select id="sex" style="width: 90px;" required>
-																<option value=" ">Select</option>
-																<option value="Male">Male</option>
-																<option value="Female">Female</option>
-														</select></td>
-
-														<td><input type="number" style="width: 90px;"
-															id="ageFrom" min="18" title="Age from" required></td>
-
-														<td><input type="number" max="45"
-															style="width: 90px;" id="ageTo" required></td>
-
-														<td><input type="text" style="width: 120px;"
+													<td><input type="text" style="width: 120px;"
 															id="accademicQualificatio" required
 															title="Accademic qualification"></td>
 
-														<td><input type="text" style="width: 120px;"
+													<td><input type="text" style="width: 120px;"
 															id="technicalQualification" required
 															title="Technical Qualification"></td>
 
-														<td><input type="number" style="width: 90px;"
-															id="expMinMonth" required title="minimum experience"></td>
+													<td><input type="number" style="width: 90px;" id="expMinMonth"
+															required title="minimum experience"></td>
 
-														<td><input type="number" style="width: 90px;"
-															id="expMaxMonth" required title="max experience"></td>
+													<td><input type="number" style="width: 90px;" id="expMaxMonth"
+															required title="max experience"></td>
 
-														<td><select id="vacancyType" style="width: 120px;"
-															required>
-																<option value=" ">Select</option>
-																<option value="Fresher">Fresher</option>
-																<option value="Experience">Experience</option>
+													<td><select id="vacancyType" style="width: 120px;" required>
+															<option value=" ">Select</option>
+															<option value="Fresher">Fresher</option>
+															<option value="Experience">Experience</option>
 														</select></td>
 
-														<td><input type="number" style="width: 90px;"
-															id="totalvacancy" required title="Total vacancy"></td>
+													<td><input type="number" style="width: 90px;" id="totalvacancy"
+															required title="Total vacancy"></td>
 
-														
-													</tr>
-													<tr id='addr1' />
 
-												</tbody>
+												</tr>
+												<tr id='addr1' />
 
-											</table>
-										</div>
+											</tbody>
+
+										</table>
 									</div>
-									<input type="hidden" id="hidden_field" th:value="${length}" />
 								</div>
-
+								<input type="hidden" id="hidden_field" th:value="${length}" />
 							</div>
-						
+
+						</div>
+
 
 
 						<!-- dynamic content end -->
@@ -339,4 +346,5 @@
 
 
 </body>
+
 </html>
