--- a/src/main/resources/templates/layouts/Master/QuotationDetail.html
+++ b/src/main/resources/templates/layouts/Master/QuotationDetail.html
@@ -18,6 +18,19 @@
 		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
 		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
 
+		<style>
+			.form-control-sm {
+				height: 30px;
+				width: 120px;
+				font-size: 11px;
+
+			}
+
+			.select {
+				width: 130px;
+				font-size: 11px;
+			}
+		</style>
 	</th:block>
 
 </head>
@@ -42,7 +55,7 @@
 			</ul>
 
 
-			<form action="#" th:object="${quotation}">
+			<form th:action="@{/quotationdetail/}" th:object="${quotation}" method="POST">
 				<!-- div content -->
 				<div class="tab-content">
 
@@ -77,7 +90,7 @@
 								<div class="form-group col-md-4">
 									<label class="form-label">RFQ Number </label> <label style="color: red">*</label>
 									<select class="form-control" onchange="changeRequestForQuotation()"
-										title="RFQ Number" id="rfqNum">
+										title="RFQ Number" id="rfqNum" th:field="*{rfqNo}">
 										<option value="">Select RFQ</option>
 										<option th:each="rfq :  ${listRfQuotation}" th:text="${rfq.rfqNo}"
 											th:value=" ${rfq.rfqNo}">
@@ -87,7 +100,7 @@
 
 								<div class="form-group col-md-4">
 									<label for="inputAddress">RFQ Date</label> <input type="date" class="form-control"
-										id="rfqDate" placeholder="rfq date" th:field=*{refDate}>
+										id="rfqDate" placeholder="rfq date" th:field=*{rfqDate}>
 								</div>
 
 
@@ -105,9 +118,9 @@
 
 								<div class="form-group col-md-4">
 									<label class="form-label">Supplier </label> <label style="color: red">*</label>
-									<select class="form-control" onchange="supplierInfo1()" title="RFQ Number"
-										id="supplierId">
-										<option value="">Select RFQ</option>
+									<select class="form-control" onchange="supplierInfo1()" title="supplier "
+										id="supplierId" th:field="*{suplierCode}">
+										<option value="">Select</option>
 										<option th:each="supp :  ${listSupplier}" th:text="${supp.supplierName}"
 											th:value=" ${supp.supplierId}">
 										</option>
@@ -127,7 +140,7 @@
 
 								<div class="form-group col-md-4">
 									<label for="inputAddress">Form Code</label> <input type="text" class="form-control"
-										id="inputAddress" placeholder="received on">
+										id="inputAddress" placeholder="received on" th:field="*{fromCode}">
 								</div>
 								<div class="form-group col-md-4">
 									<label for="inputAddress">Supplier State</label> <input type="text"
@@ -136,7 +149,7 @@
 								</div>
 								<div class="form-group col-md-4">
 									<label for="inputAddress">Form Type</label> <input type="text" class="form-control"
-										id="inputAddress" placeholder="from type" th:field="*{fromCode}">
+										id="inputAddress" placeholder="from type" th:field="*{quotType}">
 								</div>
 
 
@@ -152,17 +165,16 @@
 
 							<div class="form-row">
 								<div class="form-group col-md-6">
-									<label class="form-label">Currency Code</label> <label
-										style="color: red">*</label> <select class="form-control"
-										onchange="changeCurrency()" title="currency Name"
-										required id="currencyCode">
+									<label class="form-label">Currency Code</label> <label style="color: red">*</label>
+									<select class="form-control" onchange="changeCurrency()" title="currency Name"
+										required id="currencyCode" th:field="*{currencyCode}">
 										<option value="">Select Department</option>
 										<option th:each="currency :  ${listCurrencyMaster}"
-											th:text="${currency.currencyCode}" th:value=" ${currency.currencyCode}">
-										<span id="spanForCurrValue" th:value="${currency.currencyValue}"></span> </option>
+											th:text="${currency.currencyCode}" th:value=" ${currency.currencyValue}">
+										</option>
 									</select>
 								</div>
-								
+
 								<div class="form-group col-md-6">
 									<label for="inputPassword4">Currency Value</label> <input type="text"
 										class="form-control" id="currencyValue" placeholder="currency value"
@@ -185,26 +197,19 @@
 										th:field="*{deliveryPeriod}">
 								</div>
 								<div class="form-group col-md-4">
-									<label for="inputPassword4">Delivery Mode</label> <input type="date"
+									<label for="inputPassword4">Delivery Mode</label> <input type="text"
 										class="form-control" id="inputPassword4" placeholder="delivery mode"
 										th:field="*{delMode}">
 								</div>
 
-								<div class="col-md-4">
-									<div class="row">
-										<div class="col-md-8">
-											<br> <input type="checkbox" class="form-check-input">
-											<label class="form-check-label">Term and Condition</label>
-										</div>
-										<div class="col-md-2" style="height: 20px">
-											<span> <i class="fas fa-align-justify"></i>
-											</span>
-										</div>
-									</div>
 
-
-
+								<div class="form-group col-md-4">
+									<label for="inputEmail4">Term and Condition</label> <input type="text"
+										class="form-control" id="inputEmail4" placeholder="delivery period"
+										th:field="*{deliveryPeriod}">
 								</div>
+
+
 							</div>
 							<br>
 
@@ -271,65 +276,81 @@
 												<tr id="addr0">
 
 
-													<td><input type="text" style="width: 90px;" id="desigCode0" readonly
-															title="Designation code" required></td>
+													<td><select class="select form-control form-control-sm"
+															id="indentNumber" title="Location" required
+															onchange="getIndentDetailByIndentNumber()"
+															name="quotationItem[0].indentNum">
+															<option value=" ">Select Indent Number</option>
+															<option th:each="indent :  ${listIndentInRfq}"
+																th:text="${indent.indentNumber}"
+																th:value=" ${indent.indentNumber}">
+															</option>
 
-													<td><select id="designationName0" style="width: 130px;" required
-															onchange="selectDesignation()" title="Designation name">
-															<option value=" ">Select</option>
+														</select></td>
+
+													<td><input type="date" style="font-size: 0.95rem"
+															title="indent date" class="form-control form-control-sm"
+															name="quotationItem[0].indentDate" id="indentDate" required>
+													</td>
+
+
+
+													<td><input type="text" title="employee name"
+															name="quotationItem[0].employee"
+															class="form-control form-control-sm" id="empCode">
+													</td>
+
+													<td><input type="text" title="uom"
+															class="form-control form-control-sm" id="empName">
+													</td>
+
+
+													<td><select
+															class="select form-control form-control-sm itemContainer"
+															id="item" title="item" required
+															name="quotationItem[0].qtItemCode"
+															onchange="changeItemInQuotationDetail()">
+															<option value="">Select Item Code</option>
 
 
 														</select></td>
 
+													<td><input type="text" id="itemDescriptin"
+															class="form-control form-control-sm" required></td>
+
+													<td><input type="text" class="form-control form-control-sm" required
+															id="uomCode" title="">
+													</td>
+
+													<td><input type="text" class="form-control form-control-sm" required
+															name="quotationItem[0].rate" title="">
+													</td>
+
+													<td><input type="text" class="form-control form-control-sm" required
+															title="">
+													</td>
 
 
-													<td><select id="location" style="width: 100px;" title="Location"
-															required>
-															<option value=" ">Select</option>
-															<option value="Court">Court</option>
-															<option value="Department">Department</option>
-														</select></td>
+													<td><input type="text" class="form-control form-control-sm" required
+															name="quotationItem[0].qtItemQty" title="">
+													</td>
 
-													<td><select id="sex" style="width: 90px;" required>
-															<option value=" ">Select</option>
-															<option value="Male">Male</option>
-															<option value="Female">Female</option>
-														</select></td>
+													<td><input type="text" class="form-control form-control-sm" required
+															name="quotationItem[0].totalValue" title="">
+													</td>
 
-													<td><input type="number" style="width: 90px;" id="ageFrom" min="18"
-															title="Age from" required></td>
+													<td><input type="text" class="form-control form-control-sm" required
+															title="">
+													</td>
 
-													<td><input type="number" max="45" style="width: 90px;" id="ageTo"
-															required></td>
 
-													<td><input type="text" style="width: 120px;"
-															id="accademicQualificatio" required
-															title="Accademic qualification"></td>
-
-													<td><input type="text" style="width: 120px;"
-															id="technicalQualification" required
-															title="Technical Qualification"></td>
-
-													<td><input type="number" style="width: 90px;" id="expMinMonth"
-															required title="minimum experience"></td>
-
-													<td><input type="number" style="width: 90px;" id="expMaxMonth"
-															required title="max experience"></td>
-
-													<td><select id="vacancyType" style="width: 120px;" required>
-															<option value=" ">Select</option>
-															<option value="Fresher">Fresher</option>
-															<option value="Experience">Experience</option>
-														</select></td>
-
-													<td><input type="number" style="width: 90px;" id="totalvacancy"
-															required title="Total vacancy"></td>
 
 
 												</tr>
 												<tr id='addr1' />
 
 											</tbody>
+
 
 										</table>
 									</div>
@@ -343,10 +364,200 @@
 
 						<!-- dynamic content end -->
 
+						<!--miscellaneas start -->
+
+
+						<div class="form-border">
+							<h5>Miscellaneous Charge</h5>
+
+							<div class="container">
+
+								<div class="row">
+
+									<div class="col-md-5">
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">Total
+												Discount(%)</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+									</div>
+
+
+									<div class="col-md-5">
+
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">Discount(%)</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+
+								</div>
+
+								<div class="row">
+
+									<div class="col-md-5">
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">CGST(%)</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+									</div>
+
+
+									<div class="col-md-5">
+
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">Packing</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+
+										</div>
+
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+
+								</div>
+
+								<div class="row">
+
+									<div class="col-md-5">
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">SGST(%)</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+									</div>
+
+
+									<div class="col-md-5">
+
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">Freight</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+
+								</div>
+
+								<div class="row">
+
+									<div class="col-md-5">
+										<div class="form-group row">
+											<label for="inputEmail3" class="col-sm-2 col-form-label">IGST(%)</label>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+											<div class="col-sm-5">
+												<input type="number" class="form-control form-control-sm"
+													id="inputEmail3" placeholder="">
+											</div>
+										</div>
+									</div>
+
+
+									<div class="col-md-5">
+
+
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+
+								</div>
+
+							</div>
+
+
+
+						</div>
+
+						<!--miscellaneas end -->
+
+
+
+						<!--Total value -->
+						<div style="padding-top: 20px; margin: 20px;">
+
+							<div class="width:100%; margin: 20px;">
+								<h5>Total Value</h5>
+							</div>
+
+
+							<div class="form-group row" style="padding-top: 13px;">
+								<label for="inputEmail3" class="col-sm-2 col-form-label">Total Value(INR)</label>
+								<div class="col-sm-4">
+									<input type="number" class="form-control" id="inputEmail3">
+								</div>
+							</div>
+							<div class="form-group row">
+								<label for="inputEmail3" class="col-sm-2 col-form-label">Total Value INR</label>
+								<div class="col-sm-4">
+									<input type="number" class="form-control" id="inputEmail3">
+								</div>
+							</div>
+						</div>
+
+						<!--End Total value -->
 					</div>
+
+
+
 
 				</div>
 				<!-- end div content -->
+
+
+
+				<div class="row" style="margin: 10px">
+					<input type="submit" value="Submit" class="btn btn-primary" /> <input type="reset" value="Reset"
+						class="btn btn-danger" />
+				</div>
 
 			</form>
 		</div>
