--- a/src/main/resources/templates/layouts/Master/quotationApproval.html
+++ b/src/main/resources/templates/layouts/Master/quotationApproval.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
                                                 ~{::title},
                                                 ~{:: #home-static-resources},
                                                 ~{:: #home-header},
@@ -12,25 +11,23 @@
                                                )}">
 
 <head>
-<title>Title of Home Page</title>
+	<title>Title of Home Page</title>
 
-<th:block id="home-static-resources">
+	<th:block id="home-static-resources">
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
+		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
 
-</th:block>
+	</th:block>
 
 </head>
+
 <body>
 
 	<div id="home-header">eBs</div>
 
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
+	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
 	</div>
 
 	<div id="home-main-content">
@@ -38,47 +35,89 @@
 		<h4>Quotation Comparitive and Approval</h4>
 
 
-		<form th:action="@{/designation/}" method="POST"
-			>
-			<div class="form-border">
+		<form th:action="@{/designation/}" method="POST">
 
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Rfq Number</label> <input
-							type="text" class="form-control" placeholder="city code"
-							>
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Rfq Code</label> <input
-							type="text" class="form-control" placeholder="city name"
-							>
-					</div>
 
-				</div>
+			<div class="card-body">
+				<form id="validation-form" action="#" method="post">
 
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Item Code</label> <input type="text"
-							class="form-control" placeholder="city code"
-							>
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">Item Name</label> <input
-							type="number" class="form-control" placeholder="city name"
-							>
-					</div>
-					
-					
+					<table class="table table-striped table-bordered table-sm" style="width: 100%">
+						<thead>
+							<tr>
+								<th scope="col" class="text-center">Quotation Number</th>
+								<th scope="col" class="text-center">Quotation Date</th>
+								<th scope="col" class="text-center">Quotation Type</th>
+								<th scope="col" class="text-center">Indent Number</th>
+								<th scope="col" class="text-center">Indent Date</th>
+								<th scope="col" class="text-center">Supplier Name</th>
+								<th scope="col" class="text-center">Item Code</th>
+								<th scope="col" class="text-center">Item Quantity</th>
+								<th scope="col" class="text-center">Total Value(INR)</th>
+								<th scope="col" class="text-center">Approval Status</th>
+								<th scope="col" class="text-center">View</th>
 
-				</div>
+							</tr>
+						</thead>
+						<tbody>
 
-	
+							<tr th:each="quotation : ${listQuotationDetail}">
+								<td><label th:text="${quotation.quotNo}"></label></td>
 
-				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary" /> <input
-						type="reset" value="Reset" class="btn btn-danger" />
-				</div>
+								<td><label th:text="${quotation.quotDate}"></label></td>
 
+								<td><label th:text="${quotation.quotType}"></label></td>
+
+								<td><label th:text="${quotation.indentNu}"></label>
+								</td>
+
+								<td><label th:text="${quotation.indentDate}"></label>
+								</td>
+								<td><label th:text="${quotation.suplierCode}"></label></td>
+
+								<td><label th:text="${quotation.itemCode}"></label></td>
+
+								<td><label th:text="${quotation.quotationItem[0].totalValue}"></label></td>
+
+								<td><label>testing</label></td>
+								<td>
+									<div class="btn-group">
+										<button type="button" class="btn btn-primary dropdown-toggle"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+											style="white-space: nowrap;font-weight: btn-font-weight;">
+											Pending
+										</button>
+										<div class="dropdown-menu" onclick="myfunction()">
+											<!--th:href="@{/qpprovalquotationdetail/{quotNum}/{status}/(quotNum=${leaveRequestapproval.leaveRequestId},status=${'Y'},leaveType=${leaveRequestapproval.leave.levCode})}"-->
+											<a class="dropdown-item" th:href="@{/approvalquotationdetail/{quotNum}/ 
+																		{status}/(quotNum=
+																			${quotation.quotNo},
+																				status=${'Y'})}">Approved</a>
+											<a class="dropdown-item" th:href="@{/approvalquotationdetail/{quotNum}/ 
+																		{status}/(quotNum=
+																			${quotation.quotNo},
+																				status=${'N'})}">Cancel</a>
+
+
+										</div>
+									</div>
+
+								</td>
+
+								<td class="text-center"><a class="btn btn-primary" 
+															th:href="@{/approvalquotationdetail/view}">
+										View</a></td>
+							</tr>
+
+
+
+
+						</tbody>
+
+					</table>
+
+
+
+				</form>
 			</div>
 		</form>
 
@@ -94,4 +133,5 @@
 
 
 </body>
+
 </html>
