--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
                                                 ~{::title},
                                                 ~{:: #home-static-resources},
                                                 ~{:: #home-header},
@@ -12,24 +11,22 @@
                                                )}">
 
 <head>
-<title>Title of Home Page</title>
+	<title>Title of Home Page</title>
 
-<th:block id="home-static-resources">
+	<th:block id="home-static-resources">
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+		<!--<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>-->
+		<!--<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />-->
 
-</th:block>
+	</th:block>
 
 </head>
+
 <body>
 
 	<div id="home-header">WhareHouse</div>
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
+	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
 	</div>
 
 
@@ -48,26 +45,33 @@
 			<h5>Purchase Order Info</h5>
 			<div class="form-row">
 				<div class="form-group col-md-3">
-					<label for="inputEmail4">PO Number</label> <input type="text"
-						class="form-control" id="inputEmail4" placeholder="po number">
+					<label for="inputEmail4">PO Number</label> <input type="text" class="form-control" id="inputEmail4"
+						placeholder="po number">
 				</div>
 				<div class="form-group col-md-3">
-					<label for="inputPassword4">PO Date</label> <input type="date"
-						class="form-control" id="inputPassword4" placeholder="po date">
+					<label for="inputPassword4">PO Date</label> <input type="date" class="form-control"
+						id="inputPassword4" placeholder="po date">
 				</div>
 
 			</div>
 
 			<div class="form-row">
 				<div class="form-group col-md-3">
-					<label for="inputPassword4">GST</label> <input type="text"
-						class="form-control" id="inputPassword4" placeholder="gst">
+					<label class="form-label">Gst</label> <label style="color: red">*</label> <select
+						class="form-control" id="" title="urgency" required>
+						<option value="gst" selected>GST</option>
+						<option value="nongst">Non-GST</option>
+
+					</select>
 				</div>
 
 				<div class="form-group col-md-3">
-					<label for="inputAddress">CancelButton Status</label> <input
-						type="text" class="form-control" id="inputAddress"
-						placeholder="cancelbutton status">
+					<label for="inputAddress">Cancellation Status</label> <select class="form-control" id=""
+						title="urgency" required>
+						<option value="yes">Yes</option>
+						<option value="no" selected>No</option>
+
+					</select>
 				</div>
 
 			</div>
@@ -79,36 +83,52 @@
 			<h5>Nature of Purchase</h5>
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputEmail4">Nature of Purchase</label> <input
-						type="text" class="form-control" id="inputEmail4"
-						placeholder="nature of purchase">
+					<label for="inputEmail4">Nature of Purchase</label><select class="form-control" id=""
+						title="urgency" required>
+
+						<option value="yes">Capital</option>
+						<option value="non" selected>Non-Capital</option>
+					</select>
 				</div>
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Open PO</label> <input type="text"
-						class="form-control" id="inputPassword4" placeholder="po date">
+					<label for="inputPassword4">Open PO</label> <select class="form-control" id="" title="urgency"
+						required>
+
+						<option value="yes" selected>Yes</option>
+						<option value="non">No</option>
+					</select>
 				</div>
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">PO Type</label> <input type="date"
-						class="form-control" id="inputPassword4" placeholder="po date">
+					<label for="inputPassword4">PO Type</label> <select class="form-control" id="" title="urgency"
+						required>
+
+						<option value="InterState" selected>Inter State</option>
+						<option value="IntraState">Intra State</option>
+					</select>
 				</div>
 
 			</div>
 
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Purchase Through</label> <input
-						type="text" class="form-control" id="inputPassword4"
-						placeholder="purchase through">
+					<label for="inputPassword4">Purchase Through</label> <select class="form-control" id=""
+						title="urgency" required>
+						<option value="quotation" selected>Quotation</option>
+						<option value="indent">Indent</option>
+					</select>
 				</div>
 
 				<div class="form-group col-md-4">
-					<label for="inputAddress">Quotation Num</label> <input type="text"
-						class="form-control" id="inputAddress"
-						placeholder="cancelbutton status">
+					<label for="inputAddress">Quotation Number</label>
+					<select class="form-control" id="" title="" required>
+						<option value="">Select</option>
+						<option th:each="quotationDetal :  ${lsitQuotationDetail}" th:text="${quotationDetal.quotNo}"
+							th:value=" ${quotationDetal.quotNo}"></option>
+					</select>
 				</div>
+
 				<div class="form-group col-md-4">
-					<label for="inputAddress">Date</label> <input type="date"
-						class="form-control" id="inputAddress"
+					<label for="inputAddress">Date</label> <input type="date" class="form-control" id="inputAddress"
 						placeholder="cancelbutton status">
 				</div>
 
@@ -120,22 +140,39 @@
 		<div class="form-border">
 			<h5>Supplier Info</h5>
 			<div class="form-row">
+
 				<div class="form-group col-md-4">
-					<label for="inputEmail4">Supplier</label> <input type="text"
-						class="form-control" id="inputEmail4" placeholder="supplier">
+					<label for="inputEmail4">Supplier</label>
+					<select id="supplierId" class="form-control form-control-sm select" required title="supplier code"
+						onchange="supplierInfo()">
+						<option value=" ">Select</option>
+						<option th:each="supplier :  ${listSupplier}" th:text="${supplier.supplierName}"
+							th:value=" ${supplier.supplierId}">
+						</option>
+
+
+					</select>
 				</div>
+
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Supplier State</label> <input
-						type="text" class="form-control" id="inputPassword4"
-						placeholder="supplier state">
+					<label for="inputPassword4">Supplier State</label> <input type="text" class="form-control"
+						id="supplierState" placeholder="supplier state">
 				</div>
 
 			</div>
 
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Currency</label> <input type="text"
-						class="form-control" id="inputPassword4" placeholder="currency">
+					<label for="inputPassword4">Currency</label>
+
+					<select id="currencyId" class="form-control form-control-sm select" required title="currency">
+						<option value=" ">Select</option>
+						<option th:each="currency :  ${listCurrency}" th:text="${currency.currencyValue}"
+							th:value=" ${currency.currencyCode}">
+						</option>
+
+
+					</select>
 				</div>
 
 
@@ -150,33 +187,30 @@
 			<h5>Execution Detail</h5>
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputEmail4">Supply Date</label> <input type="date"
-						class="form-control" id="inputEmail4" placeholder="supply date">
+					<label for="inputEmail4">Supply Date</label> <input type="date" class="form-control"
+						id="inputEmail4" placeholder="supply date">
 				</div>
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Delivery Date</label> <input
-						type="date" class="form-control" id="inputPassword4"
-						placeholder="po date">
+					<label for="inputPassword4">Delivery Date</label> <input type="date" class="form-control"
+						id="inputPassword4" placeholder="po date">
 				</div>
 
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Conversion Value</label> <input
-						type="text" class="form-control" id="inputPassword4"
-						placeholder="gst">
+					<label for="inputPassword4">Conversion Value</label> <input type="text" class="form-control"
+						id="inputPassword4" placeholder="gst">
 				</div>
 
 			</div>
 
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Remarks</label> <input type="text"
-						class="form-control" id="inputPassword4" placeholder="gst">
+					<label for="inputPassword4">Remarks</label> <input type="text" class="form-control"
+						id="inputPassword4" placeholder="gst">
 				</div>
 
 				<div class="form-group col-md-4">
-					<label for="inputAddress">Invoice Address</label> <input
-						type="text" class="form-control" id="inputAddress"
-						placeholder="Invoce Address">
+					<label for="inputAddress">Invoice Address</label> <input type="text" class="form-control"
+						id="inputAddress" placeholder="Invoce Address">
 				</div>
 
 
@@ -197,8 +231,7 @@
 
 
 			<div class="table-responsive">
-				<table id="example" aria-describedby="example"
-					class="table table-striped display">
+				<table id="example" aria-describedby="example" class="table table-striped display">
 					<thead>
 						<tr>
 
@@ -229,91 +262,62 @@
 						</tr>
 					</thead>
 
-					<!-- 	<tbody>
-							<tr id="addr0">
+					<tbody>
+						<tr id="addr0">
 
-
-								<td><input type="text" style="width: 90px;"
-									id="indItemCode0" readonly title="" required
-									name="opeIndentDetail[0].indItemCode"></td>
-								item description
-								<td><input type="text" style="width: 120px;"
-									id="salaryFrom" required title="Salary"></td>
-
-								<td><input type="text" style="width: 90px;"
-									id="qtyInStock0"  title="" required
-									name="opeIndentDetail[0].qtyInStock"></td>
+							<td><select id="supplierId" class="form-control form-control-sm select" required
+									title="supplier code" onchange="supplierInfo()">
+									<option value="">Select</option>
 
 
 
+								</select></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="supplierAdd"
+									title="supplier address"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="supplierCity"
+									title="supplier city"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="supplierState"
+									title="supplier State"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="contactPerson"
+									title="contact person"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="email">
+							</td>
+
+							<td><input type="text" class="form-control form-control-sm" title="Accademic qualification">
+							</td>
+
+							<td><input type="text" class="form-control form-control-sm" id="technicalQualification"
+									title="Technical Qualification">
+							</td>
+							<td><input type="text" class="form-control form-control-sm" id="supplierState"
+									title="supplier State"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="contactPerson"
+									title="contact person"></td>
+
+							<td><input type="text" class="form-control form-control-sm" id="email">
+							</td>
+
+							<td><input type="text" class="form-control form-control-sm" title="Accademic qualification">
+							</td>
+
+							<td><input type="text" class="form-control form-control-sm" id="technicalQualification"
+									title="Technical Qualification">
+							</td>
 
 
-								<td><input type="text" style="width: 90px;"
-									id="qtyProcured0" title="" required
-									name="opeIndentDetail[0].qtyProcured"></td>
-
-								<td><input type="text" style="width: 90px;"
-									id="qtyProcured0" title="" required
-									name="opeIndentDetail[0].pipelineQty"></td>
 
 
-								<td><input type="text" style="width: 90px;" id="indQty0"
-									min="18" title="Age from" required
-									name="opeIndentDetail[0].indQty"></td>
+						</tr>
+						<tr id='addr1' />
 
-								<td><input type="text" max="45" style="width: 90px;"
-									id="ageTo" required
-									name="opeIndentDetail[0].approvedQty"></td>
+					</tbody>
 
-								gor status
-								<td><input type="text" style="width: 120px;"
-									id="accademicQualificatio" required
-									title="Accademic qualification"></td>
-
-								<td><input type="text" style="width: 90px;"
-									id="expMaxMonth" required title="max experience"
-									name="opeIndentDetail[0].currencyCode"></td>
-
-								<td><input type="text" style="width: 90px;"
-									id="expMaxMonth" required title="max experience"
-									name="opeIndentDetail[0].conversionvalue"></td>
-
-
-								<td><input type="text" style="width: 120px;"
-									id="technicalQualification" required
-									title="Technical Qualification"
-									name="opeIndentDetail[0].itemRate"></td>
-
-								unit 
-								<td><input type="text" style="width: 120px;" id="salaryTo"
-									required></td>
-
-								<td><input type="text" style="width: 120px;" id="salaryTo"
-									required name="opeIndentDetail[0].totalValue"></td>
-
-								total value (INR) 
-								<td><input type="text" style="width: 120px;" id="salaryTo"
-									required></td>
-
-								for requisition date 
-								<td><input type="text" style="width: 120px;"
-									id="salaryFrom" required title="Salary"></td>
-
-								<td><input type="text" style="width: 90px;"
-									id="purStatusItemWise" required title="minimum experience"
-									name="opeIndentDetail[0].purStatusItemWise"></td>
-
-
-								<td><input type="text" style="width: 120px;"
-									id="indPurpose0" required
-									name="opeIndentDetail[0].indPurpose"></td>
-
-								<td></td>
-							</tr>
-							<tr id='addr1' />
-
-						</tbody>
- -->
 
 				</table>
 			</div>
@@ -329,14 +333,12 @@
 			<h5>Total value</h5>
 			<div class="form-row">
 				<div class="form-group col-md-4">
-					<label for="inputEmail4">Total Cost(Excluding tax)</label> <input
-						type="number" class="form-control" id="inputEmail4"
-						placeholder="supplier">
+					<label for="inputEmail4">Total Cost(Excluding tax)</label> <input type="number" class="form-control"
+						id="inputEmail4" placeholder="supplier">
 				</div>
 				<div class="form-group col-md-4">
-					<label for="inputPassword4">Total Cost(Including tax)</label> <input
-						type="number" class="form-control" id="inputPassword4"
-						placeholder="supplier state">
+					<label for="inputPassword4">Total Cost(Including tax)</label> <input type="number"
+						class="form-control" id="inputPassword4" placeholder="supplier state">
 				</div>
 
 			</div>
@@ -347,8 +349,8 @@
 
 
 		<div class="row" style="margin: 10px">
-			<input type="submit" value="Submit" class="btn btn-primary" /> <input
-				type="reset" value="Reset" class="btn btn-danger" />
+			<input type="submit" value="Submit" class="btn btn-primary" /> <input type="reset" value="Reset"
+				class="btn btn-danger" />
 		</div>
 
 
@@ -372,5 +374,17 @@
     </div> -->
 
 
+	<script>
+
+		$(document).ready(function () {
+			console.log("ready!");
+			alert("hello");
+		});
+	</script>
+
 </body>
+
+
+
+
 </html>
