--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -7,15 +7,20 @@
 	<title th:replace="${title}">Page 1 Title</title>
 
 
-	<link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
+	
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!--<script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js}"></script>-->
 
-	<script type="text/javascript" th:src="@{http://code.jquery.com/jquery-latest.js}"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<!--<script type="text/javascript" th:src="@{http://code.jquery.com/jquery-latest.js}"></script>-->
+	
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
 
-	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-
+	<!--<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>-->
+	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	
+	
+<link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	
@@ -23,7 +28,7 @@
 
 
 	<script src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>
-
+	
 	<script type="text/javascript" th:src="@{/JS/myjs.js}"></script>
 
 
