Code Commit @Surendra
added js and index page location fule path updated

--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -118,11 +118,11 @@
 
 
 
-			<script src="../../plugins/jQuery/jQuery-2.1.4.min.js"></script>
+			<script src="js/jQuery-2.1.4.min.js"></script>
 
-			<script src="../../bootstrap/js/bootstrap.min.js"></script>
+			<script src="js/bootstrap.min.js"></script>
 
-			<script src="../../plugins/fastclick/fastclick.min.js"></script>
+			<script src="js/fastclick.min.js"></script>
 
 			<script src="js/app.min.js"></script>
 
