Code Commit @Surendra
Tag added Done

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"lang="en">
+
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar" th:fragment="sidebar" style="overflow: auto;">
 	<!-- sidebar: style can be found in sidebar.less -->
@@ -174,3 +177,4 @@
 	
 	</aside><!-- /.control-sidebar -->
 </aside>
+</html>
