code commit@Rahul
add menu library and  menu clicking

--- a/src/main/resources/templates/layouts/Master/state.html
+++ b/src/main/resources/templates/layouts/Master/state.html
@@ -105,8 +105,10 @@
 			<!--   <section class="content">
         
         </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js"></script>
+			<script src="../../js/bootstrap.min.js"></script>
+			<script src="../../js/fastclick.min.js"></script>
 			<script src="../../js/app.min.js"></script>
-
 			<script src="../../js/demo.js"></script>
 </body>
 
