--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar" th:fragment="sidebar" style="overflow: auto;">
@@ -31,14 +31,19 @@
 			<li class="header">MAIN NAVIGATION</li>
 			<li class="treeview">
 				<a href="#">
-					<i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
+					<i class="fa fa-dashboard"></i> <span>Software Admin</span> <i class="fa fa-angle-left pull-right"></i>
 				</a>
 				<ul class="treeview-menu">
-					<li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-					<li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+					<li><a href="../../index.html"><i class="fa fa-circle-o"></i> Company</a></li>
+					<li><a th:href="@{/financialyear/}"><i class="fa fa-circle-o"></i>Financial year</a></li>
+					<li><a th:href="@{/financialactiveyear/}"><i class="fa fa-circle-o"></i> Active Financial Year</a></li>
+					<li><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
+					<li><a th:href="@{/financialyear/}"><i class="fa fa-circle-o"></i>User Rights</a></li>
+					<li><a th:href="@{/module/}"><i class="fa fa-circle-o"></i>Module</a></li>
+					<li><a th:href="@{/program/}"><i class="fa fa-circle-o"></i>Program</a></li>
 				</ul>
 			</li>
-			<li class="treeview">
+			<!--<li class="treeview">
 				<a href="#">
 					<i class="fa fa-files-o"></i>
 					<span>Layout Options</span>
@@ -51,33 +56,37 @@
 					<li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a>
 					</li>
 				</ul>
-			</li>
-			<li>
+			</li>-->
+			<!--<li>
 				<a href="../widgets.html">
 					<i class="fa fa-th"></i> <span>Widgets</span> <small class="label pull-right bg-green">new</small>
 				</a>
-			</li>
+			</li>-->
 			<li class="treeview">
 				<a href="#">
 					<i class="fa fa-pie-chart"></i>
-					<span>Charts</span>
+					<span>Master</span>
 					<i class="fa fa-angle-left pull-right"></i>
 				</a>
-				    <ul class="treeview-menu">
-        <li><a th:href="@{/city/}">Product Management</a></li>
-        <li><a th:href="@{/program/}">Order Management</a></li>
-    </ul>
-				
-				
-				
-				
 				<ul class="treeview-menu">
-					<li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-					<li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-					<li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-					<li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+					<li><a href="#">WhareHouse Master</a></li>
+					
 				</ul>
+
+				<ul class="treeview-menu">
+					<li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> Store</a></li>
+					<li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Category</a></li>
+					<li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Item</a></li>
+					<li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> UOM(Unit of Measurement)</a></li>
+				</ul>
+				
+				
+				
 			</li>
+			
+			
+			
+			
 			<li class="treeview">
 				<a href="#">
 					<i class="fa fa-laptop"></i>
@@ -93,80 +102,13 @@
 					<li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
 				</ul>
 			</li>
-			<li class="treeview active">
-				<a href="#">
-					<i class="fa fa-edit"></i> <span>Forms</span>
-					<i class="fa fa-angle-left pull-right"></i>
-				</a>
-				<ul class="treeview-menu">
-					<li class="active"><a href="general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-					<li><a href="advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-					<li><a href="editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
-				</ul>
-			</li>
-			<li class="treeview">
-				<a href="#">
-					<i class="fa fa-table"></i> <span>Tables</span>
-					<i class="fa fa-angle-left pull-right"></i>
-				</a>
-				<ul class="treeview-menu">
-					<li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-					<li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="../calendar.html">
-					<i class="fa fa-calendar"></i> <span>Calendar</span>
-					<small class="label pull-right bg-red">3</small>
-				</a>
-			</li>
-			<li>
-				<a href="../mailbox/mailbox.html">
-					<i class="fa fa-envelope"></i> <span>Mailbox</span>
-					<small class="label pull-right bg-yellow">12</small>
-				</a>
-			</li>
-			<li class="treeview">
-				<a href="#">
-					<i class="fa fa-folder"></i> <span>Examples</span>
-					<i class="fa fa-angle-left pull-right"></i>
-				</a>
-				<ul class="treeview-menu">
-					<li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-					<li><a href="../examples/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-					<li><a href="../examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-					<li><a href="../examples/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-					<li><a href="../examples/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-					<li><a href="../examples/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-					<li><a href="../examples/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-					<li><a href="../examples/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-				</ul>
-			</li>
-			<li class="treeview">
-				<a href="#">
-					<i class="fa fa-share"></i> <span>Multilevel</span>
-					<i class="fa fa-angle-left pull-right"></i>
-				</a>
-				<ul class="treeview-menu">
-					<li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-					<li>
-						<a href="#"><i class="fa fa-circle-o"></i> Level One <i
-								class="fa fa-angle-left pull-right"></i></a>
-						<ul class="treeview-menu">
-							<li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-							<li>
-								<a href="#"><i class="fa fa-circle-o"></i> Level Two <i
-										class="fa fa-angle-left pull-right"></i></a>
-								<ul class="treeview-menu">
-									<li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-									<li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-				</ul>
-			</li>
+
+
+
+
+
+
+
 			<li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
 			<li class="header">LABELS</li>
 			<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
@@ -181,8 +123,9 @@
 	<!-- Control Sidebar -->
 	<aside class="control-sidebar control-sidebar-dark">
 		<!-- Create the tabs -->
-		
-	
+
+
 	</aside><!-- /.control-sidebar -->
 </aside>
+
 </html>
