--- a/src/main/resources/templates/layouts/Master/financialyear.html
+++ b/src/main/resources/templates/layouts/Master/financialyear.html
@@ -2,7 +2,7 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
+<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -19,41 +19,43 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
+							<div class="col-md-3">
+							</div>
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Quick Example</h3>
-								</div>
-								<!-- form start -->
-								<form role="form" th:action="@{/financialactiveyear/}" method="POST"
-									th:object="${financialActiveYear}">
-									<div class="box-body">
 
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Financial Year Code</label> <input type="text"
-												class="form-control" placeholder="financial year code"
-												th:field="*{financialYearCode}">
-										</div>
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">From (Date)</label> <input type="date"
-												class="form-control" placeholder="from date" th:field="*{fromDate}">
-										</div>
+							<div class="col-md-6" style="margin-top: 20px;">
 
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">To (Date)</label> <input type="date"
-												class="form-control" placeholder="to date" th:field="*{toDate}">
-										</div>
+								<div class="box box-primary">
+									<div class="box-header with-border">
+										<h3 class="box-title">Financial Year</h3>
+									</div>
+									<!-- form start -->
+									<form role="form" th:action="@{/financialyear/}" method="POST"
+										th:object="${financialYear}">
+										<div class="box-body">
 
-										<div class="form-group" style="margin: 10px;">
+											<div class="form-group col-md-12">
+												<label for="inputEmail4">Financial Year Code</label> <input type="text"
+													class="form-control" placeholder="financial year code"
+													th:field="*{financialYearCode}">
+											</div>
+											<div class="form-group col-md-12">
+												<label for="inputPassword4">From (Date)</label> <input type="date"
+													class="form-control" placeholder="from date" th:field="*{fromDate}">
+											</div>
+											<div class="form-group col-md-12">
+												<label for="inputEmail4">To (Date)</label> <input type="date"
+													class="form-control" placeholder="to date" th:field="*{toDate}">
+											</div>
 
 											<div class="form-check form-check-inline">
 												<input class="form-check-input" type="radio" name="inlineRadioOptions"
@@ -66,36 +68,32 @@
 													id="inlineRadio1" value="N"> <label class="form-check-label"
 													for="inlineRadio1">In-Active</label>
 											</div>
-
-
-
 										</div>
-									</div>
 
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
-									<a th:href="@{/financialactiveyear/list}">view financial year list</a>
+										<div class="box-footer">
+											<input type="submit" value="Submit" class="btn btn-primary" />
+											<input type="reset" value="Reset" class="btn btn-danger" />
+										</div>
+										<a th:href="@{/financialyear/list}">view financial year list</a>
+
+									</form>
+								</div>
+							</div>
 
 
-								</form>
+							<div class="col-md-3">
 							</div>
 						</div>
 
-
-						<div class="col-md-3">
-						</div>
 					</div>
-
-				</div>
-			</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
         </section>-->
-		<script src="../../js/jQuery-2.1.4.min.js"></script>
+			<script src="../../js/jQuery-2.1.4.min.js"></script>
 			<script src="../../js/bootstrap.min.js"></script>
 			<script src="../../js/fastclick.min.js"></script>
 			<script src="../../js/app.min.js"></script>
