--- a/src/main/resources/templates/layouts/dummyFile.html
+++ b/src/main/resources/templates/layouts/dummyFile.html
@@ -19,7 +19,12 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			
+			<div class="wrapper"> 
+			
 			<section class="content-wrapper">
+			
+			
 				<div class="row">
 					<!-- left column -->
 					<div class="col-md-12">
@@ -53,14 +58,17 @@
 
 				</div>
 			</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
         </section>-->
-			<script src="js/app.min.js"></script>
-
-			<script src="/js/demo.js"></script>
+			<script src="../../js/jQuery-2.1.4.min.js"></script>
+			<script src="../../js/bootstrap.min.js"></script>
+			<script src="../../js/fastclick.min.js"></script>
+			<script src="../../js/app.min.js"></script>
+			<script src="../../js/demo.js"></script>
 </body>
 
 </html>
