--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -74,10 +74,10 @@
 				</ul>
 
 				<ul class="treeview-menu">
-					<li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> Store</a></li>
-					<li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Category</a></li>
-					<li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Item</a></li>
-					<li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> UOM(Unit of Measurement)</a></li>
+					<li><a th:href="@{/store/}"><i class="fa fa-circle-o"></i> Store</a></li>
+					<li><a th:href="@{/category/}"><i class="fa fa-circle-o"></i> Category</a></li>
+					<li><a th:href="@{/item/}"><i class="fa fa-circle-o"></i> Item</a></li>
+					<li><a th:href="@{/uom/}"><i class="fa fa-circle-o"></i> UOM(Unit of Measurement)</a></li>
 				</ul>
 				
 				
@@ -109,11 +109,7 @@
 
 
 
-			<li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-			<li class="header">LABELS</li>
-			<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-			<li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-			<li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+		
 		</ul>
 	</section>
 	<!-- /.sidebar -->
