--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -38,112 +38,113 @@
 					</section>
 
 
- <!-- Main content -->
-        <section class="content">
+					<!-- Main content -->
+					<section class="content">
 
-          <!-- Default box -->
-          <div class="box">
-            
-            
-            
-					<div class="row">
-						<!-- left column -->
-						<div class="col-md-12">
-							<div class="col-md-3">
-							</div>
+						<!-- Default box -->
+						<div class="box">
 
 
-							<div class="col-md-6 shadow bg-white rounded" style="margin-top: 20px;">
-								<!-- general form elements -->
-								<div class="box box-primary">
-									<div class="box-header with-border">
-										<!--<h3 class="box-title">Category Master</h3>-->
-									</div><!-- /.box-header -->
-									<!-- form start -->
-									<form role="form" th:action="@{/category/}" method="POST" th:object="${category}">
-										<div class="box-body">
 
-											<div class="form-group">
-												<label for="inputEmail4">Category Code</label> <input type="text"
-													class="form-control" placeholder="store code"
-													th:field="*{categCode}">
-											</div>
-											<div class="form-group">
-												<label for="inputEmail4">Description</label> <input type="text"
-													class="form-control" placeholder="location">
-											</div>
-
-											<div class="form-group ">
-												<label class="form-label">Acount Head</label> <label
-													style="color: red">*</label> <select class="form-control" id=""
-													title="type" th:field="*{accountHead}" required>
-													<option value="">Select</option>
-													<option value="t-1">type-1</option>
-													<option value="t-2">type-2</option>
-												</select>
-											</div>
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-3">
+									</div>
 
 
-											<div class="form-group">
-												<label for="inputEmail4">Description</label> <input type="text"
-													class="form-control" placeholder="description"
-													th:field="*{description}">
-											</div>
+									<div class="col-md-6 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/category/}" method="POST"
+												th:object="${category}">
+												<div class="box-body">
 
-											<div class="form-group">
-												<label for="inputEmail4">Parent Code</label> <input type="text"
-													class="form-control" placeholder="parent code"
-													th:field="*{parentCode}">
-											</div>
+													<div class="form-group">
+														<label for="inputEmail4">Category Code</label> <input
+															type="text" class="form-control" placeholder="store code"
+															th:field="*{categCode}">
+													</div>
+													<div class="form-group">
+														<label for="inputEmail4">Description</label> <input type="text"
+															class="form-control" placeholder="location">
+													</div>
 
-											<div class="form-group">
-												<label for="inputEmail4">Parent Name</label> <input type="text"
-													class="form-control" placeholder="parent name"
-													th:field="*{parentName}">
-											</div>
+													<div class="form-group ">
+														<label class="form-label">Acount Head</label> <label
+															style="color: red">*</label> <select class="form-control"
+															id="" title="type" th:field="*{accountHead}" required>
+															<option value="">Select</option>
+															<option value="t-1">type-1</option>
+															<option value="t-2">type-2</option>
+														</select>
+													</div>
 
-											<div class="form-group" style="margin: 10px;">
 
-												<div class="form-check form-check-inline">
-													<input class="form-check-input" type="radio"
-														name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-														class="form-check-label" for="inlineRadio1">Active</label>
+													<div class="form-group">
+														<label for="inputEmail4">Description</label> <input type="text"
+															class="form-control" placeholder="description"
+															th:field="*{description}">
+													</div>
+
+													<div class="form-group">
+														<label for="inputEmail4">Parent Code</label> <input type="text"
+															class="form-control" placeholder="parent code"
+															th:field="*{parentCode}">
+													</div>
+
+													<div class="form-group">
+														<label for="inputEmail4">Parent Name</label> <input type="text"
+															class="form-control" placeholder="parent name"
+															th:field="*{parentName}">
+													</div>
+
+													<div class="form-group" style="margin: 10px;">
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="Y">
+															<label class="form-check-label"
+																for="inlineRadio1">Active</label>
+														</div>
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="N">
+															<label class="form-check-label"
+																for="inlineRadio1">In-Active</label>
+														</div>
+
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
 												</div>
+												<a th:href="@{/category/list}">view category</a>
 
-												<div class="form-check form-check-inline">
-													<input class="form-check-input" type="radio"
-														name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-														class="form-check-label" for="inlineRadio1">In-Active</label>
-												</div>
-
-											</div>
-
-										</div><!-- /.box-body -->
-
-										<div class="box-footer" style="margin: 10px">
-											<input type="submit" value="Submit" class="btn btn-primary" />
-											<input type="reset" value="Reset" class="btn btn-danger" />
-										</div>
-
-										<div class="row text-right m-10">
-											<a th:href="@{/category/list}">view category</a>
-										</div>
-									</form>
+											</form>
 
 
-								</div><!-- /.box -->
+										</div><!-- /.box -->
+
+									</div>
+
+
+									<div class="col-md-3">
+									</div>
+								</div>
 
 							</div>
 
-
-							<div class="col-md-3">
-							</div>
 						</div>
-
-					</div>
-					
-          </div>
-        </section>
+					</section>
 				</section>
 			</div>
 
@@ -151,11 +152,11 @@
 			<!--   <section class="content">
         
         </section>-->
-        	<script src="../../js/jQuery-2.1.4.min.js"></script>
-			<script src="../../js/bootstrap.min.js"></script>
-			<script src="../../js/fastclick.min.js"></script>
-			<script src="../../js/app.min.js"></script>
-			<script src="../../js/demo.js"></script>
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
