--- a/src/main/resources/templates/layouts/Master/userMaster.html
+++ b/src/main/resources/templates/layouts/Master/userMaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
@@ -28,53 +28,74 @@
 
 
 						<div class="col-md-6" style="margin-top: 20px;">
-
+							<!-- general form elements -->
 							<div class="box box-primary">
 								<div class="box-header with-border">
-									<h3 class="box-title">Module Master</h3>
-								</div>
+									<h3 class="box-title">User Master</h3>
+								</div><!-- /.box-header -->
 								<!-- form start -->
-								<form role="form" th:action="@{/module/}" method="POST" th:object="${module}">
-
+								<form role="form" th:action="@{/user/}" method="POST" th:object="${user}">
 									<div class="box-body">
+
 										<div class="form-group col-md-12">
-											<label for="inputEmail4">Module Code</label> <input type="text"
-												class="form-control" placeholder="module code" th:field="*{moduleCode}"
-												disabled>
+											<label>Employee</label> <label style="color: red">*</label> <select
+												class="form-control" title="state Name" required th:field="*{employee}">
+												<option value="">Select</option>
+												<option th:each="employee :  ${listEmployee}"
+													th:text="${employee.empName}" th:value=" ${employee.empCode}">
+												</option>
+											</select>
+										</div>
+
+
+										<div class="form-group col-md-12">
+											<label for="inputEmail4">User Code</label> <input type="text"
+												class="form-control" placeholder="district" th:field="*{userCode}">
 										</div>
 										<div class="form-group col-md-12">
-											<label for="inputPassword4">Module Name</label> <input type="text"
-												class="form-control" placeholder="module name" th:field="*{moduleName}">
+											<label for="inputEmail4">User Name</label> <input type="text"
+												class="form-control" placeholder="city type" th:field="*{userName}">
 										</div>
+
+
 										<div class="form-group col-md-12">
-											<label for="inputPassword4">Sequence Number</label> <input type="text"
-												class="form-control" placeholder="sequence number" th:field="*{seqNo}">
+											<label>User Password</label> <input type="password" class="form-control"
+												placeholder="city code" th:field="*{userPassword}">
+										</div>
+
+										<div class="form-group" style="margin: 10px;">
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="Y"> <label class="form-check-label"
+													for="inlineRadio1">Active</label>
+											</div>
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="N"> <label class="form-check-label"
+													for="inlineRadio1">In-Active</label>
+											</div>
+
 										</div>
 
 
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="Y">
-											<label class="form-check-label" for="inlineRadio1"
-												th:field="*{active}">Active</label>
-										</div>
 
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="N">
-											<label class="form-check-label" for="inlineRadio1"
-												th:field="*{active}">In-Active</label>
-										</div>
-									</div>
 
-									<div class="box-footer">
+
+
+									</div><!-- /.box-body -->
+
+
+									<div class="box-footer" style="margin: 10px">
 										<input type="submit" value="Submit" class="btn btn-primary" />
 										<input type="reset" value="Reset" class="btn btn-danger" />
 									</div>
-									<a th:href="@{/module/list}">view module list</a>	
+									<a th:href="@{/user/list}">view user list</a>
+
 
 								</form>
-							</div>
+							</div><!-- /.box -->
 						</div>
 
 
@@ -89,7 +110,6 @@
 			<!--   <section class="content">
         
         </section>-->
-
 			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
