--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -33,7 +33,7 @@
 
             <div class="form-outline mb-4">
               <input type="text" id="typeEmailX-2" class="form-control form-control-lg" name="username"/>
-              <label class="form-label" for="typeEmailX-2" >Email</label>
+              <label class="form-label" for="typeEmailX-2" >User Name</label>
             </div>
 
             <div class="form-outline mb-4">
