cod ecommit@Rahul
modification in company detail layout according new theme

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -34,7 +34,7 @@
 					<i class="fa fa-dashboard"></i> <span>Software Admin</span> <i class="fa fa-angle-left pull-right"></i>
 				</a>
 				<ul class="treeview-menu">
-					<li><a href="../../index.html"><i class="fa fa-circle-o"></i> Company</a></li>
+					<li><a th:href="@{/companydetail/}"><i class="fa fa-circle-o"></i> Company</a></li>
 					<li><a th:href="@{/financialyear/}"><i class="fa fa-circle-o"></i>Financial year</a></li>
 					<li><a th:href="@{/financialactiveyear/}"><i class="fa fa-circle-o"></i> Active Financial Year</a></li>
 					<li><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
