--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <!-- Left side column. contains the logo and sidebar -->
-<aside class="main-sidebar" th:fragment="sidebar" style="overflow: auto;">
+<aside class="main-sidebar" th:fragment="sidebar" >
 	<!-- sidebar: style can be found in sidebar.less -->
 	<section class="sidebar">
 		<!-- Sidebar user panel -->
