--- a/src/main/resources/templates/layouts/listview/listofdepartment.html
+++ b/src/main/resources/templates/layouts/listview/listofdepartment.html
@@ -41,7 +41,7 @@
 									<!-- form start -->
 									<form role="form">
 										<div class="box-body">
-											<di<div class="table-responsive-sm">
+											<div class="table-responsive-sm">
 												<table class="table table-striped" style="width: 80%">
 													<thead>
 														<tr>
